# solidity

./: .gitignore  CMakeLists.txt  DEPS_NOTES.md  Dockerfile  Jenkinsfile  PLATFORMS_INSTALL.md  README-IELE-BACKEND.md  README-IELE-INSTALL.md  README-IELE-SUPPORT.md  README.md  auction.sol  circle.yml  ciscript  default.nix  evm-to-iele-examples.txt
cmake/: EthCompilerSettings.cmake  EthDependencies.cmake  jsoncpp.cmake
demo-examples/: AuctionRegistrar.sol  ERC20.sol  FixedFeeRegistrar.sol  complex_accessors.sol  run-tests.sh
docker/: Dockerfile  README.md  server.py
env/: Dockerfile  init.sh  node-patch  qa_mineBlocks.json  soltest.sh  wallet-patch  wallet_restore.json  wallet_start.json  wallet_unlock.json
example-tests/: bid_first.iele.json  bid_higher.iele.json  bid_late.iele.json  bid_toolow.iele.json  create.iele.json  settle_duplicate.iele.json  settle_early.iele.json  settle_success.iele.json
ext/: kiele_release
help/: README.md  assembly.md  (+4 more)
libiele/: CMakeLists.txt  IeleArgument.cpp  IeleArgument.h  IeleBlock.cpp  IeleBlock.h  IeleConstant.cpp  IeleConstant.h  IeleContext.cpp  IeleContext.h  IeleContract.cpp  IeleContract.h  IeleFunction.cpp  IeleFunction.h  IeleGlobalValue.cpp  IeleGlobalValue.h  IeleGlobalVariable.cpp  IeleGlobalVariable.h  IeleInstruction.cpp  IeleInstruction.def  IeleInstruction.h  IeleIntConstant.cpp  IeleIntConstant.h  IeleLocalVariable.cpp  IeleLocalVariable.h  IeleValue.cpp  IeleValue.def  IeleValue.h  IeleValueSymbolTable.cpp  IeleValueSymbolTable.h  SymbolTableListTraits.h
libiele/iele-rt/: iele-memory-rt.h  iele-storage-rt.h
libiele/transforms/: DeadCodeElimination.cpp  IeleCFG.cpp  IeleCFG.h  IeleTransforms.h
solc/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h
(+1175 files in other folders)
